--- a/androidgcs/AndroidManifest.xml
+++ b/androidgcs/AndroidManifest.xml
@@ -56,7 +56,7 @@
 		    android:configChanges="keyboardHidden|orientation|screenSize"/>
 
 		<activity android:name="Preferences" android:label="@string/preference_title" />
-		<activity android:name="UAVLocation" android:label="@string/location_name" />
+		<activity android:name="Map" android:label="@string/location_name" />
 		<activity android:name="SystemAlarmActivity" android:label="System Alarms" />
 		<activity android:name="TuningActivity" android:label="Tuning" />
 
