Filters: enable new architecture with flag
make V=1 FILTER_ARCHITECTURE=YES -j8 all_flight

will compile using the new filter architecture.  This allows easy
integration and testing of this feature without changing the
existing system.

--- a/flight/targets/revolution/fw/Makefile.posix
+++ b/flight/targets/revolution/fw/Makefile.posix
@@ -80,10 +80,15 @@ CFLAGS += $(BLONLY_CDEFS)
 # List of modules to include
 MODULES += Actuator ManualControl Stabilization 
 MODULES += PathPlanner
-MODULES += StateEstimation
 MODULES += FirmwareIAP
 
 OPTMODULES += PathPlanner
+ifeq ($(FILTER_ARCHITECTURE),YES)
+MODULES += State
+else
+MODULES += Attitude
+endif
+
 OPTMODULES += AltitudeHold 
 OPTMODULES += VtolPathFollower 
 OPTMODULES += FixedWingPathFollower
@@ -105,7 +110,6 @@ PIOSINC = $(PIOS)/inc
 FLIGHTLIBINC = $(FLIGHTLIB)/inc
 MATHLIB = $(FLIGHTLIB)/math
 MATHLIBINC = $(MATHLIB)
-FILTERLIBINC = $(FILTERLIB)
 PIOSPOSIX = $(PIOS)/posix
 PIOSCOMMON = $(ROOT_DIR)/flight/PiOS/Common
 PIOSBOARDS = $(PIOS)/Boards
@@ -149,10 +153,10 @@ SRC += $(MATHLIB)/sin_lookup.c
 SRC += $(MATHLIB)/misc_math.c
 SRC += $(MATHLIB)/pid.c
 
-## Enable some filters
-SRC += $(FILTERLIB)/dcm_interface.c
-SRC += $(FILTERLIB)/filter_infrastructure_se3.c
-SRC += $(FILTERLIB)/filter_interface.c
+## Enable some filters for the new architecture
+ifeq ($(FILTER_ARCHITECTURE),YES)
+include $(FILTERLIB)/filters.mk
+endif
 
 ## PIOS Hardware (STM32F4xx)
 include $(PIOS)/posix/library.mk
@@ -221,8 +225,6 @@ EXTRAINCDIRS  += $(OPUAVSYNTHDIR)
 EXTRAINCDIRS  += $(FLIGHTLIBINC)
 EXTRAINCDIRS  += $(MATHLIBINC)
 
-EXTRAINCDIRS  += $(FILTERINC)
-#EXTRAINCDIRS  += $(PIOSSTM32F4XX)
 EXTRAINCDIRS  += $(PIOSCOMMON)
 
 EXTRAINCDIRS  += $(CMSISDIR)
