--- a/androidgcs/AndroidManifest.xml
+++ b/androidgcs/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="org.taulabs.androidgcs" android:versionCode="14"
-	android:versionName="Phoenix Beta">
+	package="org.taulabs.androidgcs" android:versionCode="15"
+	android:versionName="Phoenix">
 	<uses-sdk android:minSdkVersion="14" />
 
 	<uses-feature
