--- a/flight/targets/Bootloaders/PipXtreme/Makefile
+++ b/flight/targets/Bootloaders/PipXtreme/Makefile
@@ -269,6 +269,7 @@ CFLAGS += -O$(OPT)
 ifeq ($(DEBUG),NO)
 CFLAGS += -ffunction-sections
 endif
+CFLAGS += -fshort-enums
 
 CFLAGS += -mcpu=$(MCU)
 CFLAGS += $(CDEFS)
