--- a/flight/targets/Bootloaders/CopterControl/Makefile
+++ b/flight/targets/Bootloaders/CopterControl/Makefile
@@ -267,6 +267,7 @@ CFLAGS += -O$(OPT)
 ifeq ($(DEBUG),NO)
 CFLAGS += -ffunction-sections
 endif
+CFLAGS += -fshort-enums
 
 CFLAGS += -mcpu=$(MCU)
 CFLAGS += $(CDEFS)
