--- a/flight/targets/FlyingF3/Makefile
+++ b/flight/targets/FlyingF3/Makefile
@@ -279,6 +279,7 @@ CFLAGS += -mapcs-frame
 CFLAGS += -fomit-frame-pointer
 CFLAGS += -ffunction-sections -fdata-sections
 CFLAGS += -Wdouble-promotion
+CFLAGS += -fshort-enums
 
 CFLAGS += -Wall
 CFLAGS += -Werror
