--- a/flight/targets/sparky/fw/Makefile
+++ b/flight/targets/sparky/fw/Makefile
@@ -35,7 +35,7 @@ MODULES = Sensors
 MODULES += Attitude/revolution
 MODULES += BrushlessGimbal
 #MODULES += Actuator
-MODULES += Control
+MODULES += ManualControl
 MODULES += Stabilization
 MODULES += FirmwareIAP
 MODULES += Telemetry
