CopterControl: enable -Wdouble-promotions

--- a/flight/targets/CopterControl/Makefile
+++ b/flight/targets/CopterControl/Makefile
@@ -576,6 +576,7 @@ CFLAGS += -fomit-frame-pointer
 CFLAGS += -Wall
 CFLAGS += -Werror
 CFLAGS += -ffunction-sections -fdata-sections
+CFLAGS += -Wdouble-promotion
 CFLAGS += -Wa,-adhlns=$(addprefix $(OUTDIR)/, $(notdir $(addsuffix .lst, $(basename $<))))
 # Compiler flags to generate dependency files:
 CFLAGS += -MD -MP -MF $(OUTDIR)/dep/$(@F).d
