--- a/flight/targets/revolution/fw/Makefile.osx
+++ b/flight/targets/revolution/fw/Makefile.osx
@@ -31,49 +31,6 @@ include $(BOARD_INFO_DIR)/board-info.mk
 # Set to YES to compile for debugging
 DEBUG ?= YES
 
-# Set to YES to use the Servo output pins for debugging via scope or logic analyser
-ENABLE_DEBUG_PINS ?= NO
-
-# Set to Yes to enable the AUX UART which is mapped on the S1 (Tx) and S2 (Rx) servo outputs
-ENABLE_AUX_UART ?= NO
-
-#
-USE_BOOTLOADER ?= NO
-
-# List of modules to include
-MODULES += Actuator ManualControl Stabilization 
-MODULES += FirmwareIAP
-
-ifeq ($(FILTER_ARCHITECTURE),YES)
-MODULES += State
-else
-MODULES += Attitude
-endif
-
-OPTMODULES += PathPlanner
-OPTMODULES += AltitudeHold 
-OPTMODULES += VtolPathFollower 
-OPTMODULES += FixedWingPathFollower
-OPTMODULES += GroundPathFollower
-OPTMODULES += CameraStab
-OPTMODULES += OveroSync/simulated
-OPTMODULES += Autotune
-
-# To run simulation instead of connect to SITL
-MODULES += Sensors/simulated
-MODULES += SimVisualization 
-
-MODULES += Telemetry
-
-BLONLY_CDEFS += -DBOARD_TYPE=$(BOARD_TYPE)
-BLONLY_CDEFS += -DBOARD_REVISION=$(BOARD_REVISION)
-BLONLY_CDEFS += -DHW_TYPE=$(HW_TYPE)
-BLONLY_CDEFS += -DBOOTLOADER_VERSION=$(BOOTLOADER_VERSION)
-BLONLY_CDEFS += -DFW_BANK_BASE=$(FW_BANK_BASE)
-BLONLY_CDEFS += -DFW_BANK_SIZE=$(FW_BANK_SIZE)
-BLONLY_CDEFS += -DFW_DESC_SIZE=$(FW_DESC_SIZE)
-
-DEBUG ?= NO
 
 # Include objects that are just nice information to show
 STACK_DIAGNOSTICS ?= NO
@@ -123,7 +80,6 @@ CFLAGS += $(BLONLY_CDEFS)
 
 # List of modules to include
 MODULES += Actuator ManualControl Stabilization 
-MODULES += Attitude
 MODULES += FirmwareIAP
 
 OPTMODULES += PathPlanner
@@ -134,6 +90,12 @@ OPTMODULES += GroundPathFollower
 OPTMODULES += CameraStab
 OPTMODULES += OveroSync/simulated
 OPTMODULES += Autotune
+
+ifeq ($(FILTER_ARCHITECTURE),YES)
+MODULES += State
+else
+MODULES += Attitude
+endif
 
 # To run simulation instead of connect to SITL
 MODULES += Sensors/simulated
@@ -148,7 +110,6 @@ PIOSINC = $(PIOS)/inc
 FLIGHTLIBINC = $(FLIGHTLIB)/inc
 MATHLIB = $(FLIGHTLIB)/math
 MATHLIBINC = $(MATHLIB)
-PIOSINC = $(PIOS)/inc
 PIOSPOSIX = $(PIOS)/osx
 PIOSCOMMON = $(ROOT_DIR)/flight/PiOS/Common
 PIOSBOARDS = $(PIOS)/Boards
@@ -276,25 +237,19 @@ EXTRAINCDIRS  += $(OPUAVOBJINC)
 EXTRAINCDIRS  += $(OPUAVSYNTHDIR)
 EXTRAINCDIRS  += $(FLIGHTLIBINC)
 EXTRAINCDIRS  += $(MATHLIBINC)
-<<<<<<< HEAD:flight/targets/revolution/fw/Makefile.osx
-<<<<<<< HEAD
 
 EXTRAINCDIRS  += $(PIOSCOMMON)
 
 EXTRAINCDIRS  += $(CMSISDIR)
 EXTRAINCDIRS  += $(BOOTINC)
 
-<<<<<<< HEAD:flight/targets/revolution/fw/Makefile.osx
-=======
+EXTRAINCDIRS  += $(PIOSBOARDS)
+
+EXTRAINCDIRS  += $(CMSISDIR)
+EXTRAINCDIRS  += $(BOOTINC)
+EXTRAINCDIRS  += $(HWDEFSINC)
+
 EXTRAINCDIRS  += $(OPSYSTEM)
-=======
-EXTRAINCDIRS  += $(FILTERLIBINC)
-EXTRAINCDIRS  += $(FLIGTH)
->>>>>>> Revolution: enable new filter for simulation
->>>>>>> Revolution: enable new filter for simulation:flight/targets/Revolution/Makefile.osx
-=======
-EXTRAINCDIRS  += $(FLIGTH)
->>>>>>> Filters: enable new architecture with flag:flight/targets/Revolution/Makefile.osx
 EXTRAINCDIRS  += $(PIOSPOSIX)
 EXTRAINCDIRS  += $(RTOSINCDIR)
 #EXTRAINCDIRS  += $(APPLIBDIR)
