--- a/flight/targets/revolution/fw/Makefile.osx
+++ b/flight/targets/revolution/fw/Makefile.osx
@@ -28,7 +28,7 @@ TOP      := $(realpath $(WHEREAMI)/../../../../)
 
 override THUMB :=
 include $(TOP)/make/firmware-defs.mk
-include $(TOP)/make/boards/$(BOARD_NAME)/board-info.mk
+include ../board-info/board-info.mk
 
 # Set developer code and compile options
 # Set to YES to compile for debugging
